Fix input text cutting off

--- a/assets/stylesheets/_app.scss
+++ b/assets/stylesheets/_app.scss
@@ -35,7 +35,8 @@ div#app {
   input {
     display: block;
     font-size: 2rem;
-    padding: 1rem;
+    line-height: 3rem;
+    padding: .5rem 1rem;
     margin: 0;
     border: 2px solid $muted-color;
     box-sizing: border-box;
